<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFrame"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dark_grey2"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text=""
            android:textColor="#0f0" />
        
        <TextView
            android:id="@+id/tv_lefttime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tv_task"
            android:text=""
            android:textColor="#0f0" />

        <TextView
            android:id="@+id/connect_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_task"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/disconnected"
            android:textColor="#f00" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <cn.yun.ble.TopBar
            android:id="@+id/bar_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:minHeight="45dp"
            app:leftBackground="@drawable/blue_button"
            app:leftText="@string/duration"
            app:titleText=""
            app:titleTextColor="#0f0"
            app:titleTextSize="10sp" >
        </cn.yun.ble.TopBar>
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:background="#0f0"
		    />
        <cn.yun.ble.TopBar
            android:id="@+id/bar_angle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            app:leftBackground="@drawable/blue_button"
            app:leftText="@string/angle"
            app:titleText=""
            app:titleTextColor="#0f0"
            app:titleTextSize="10sp" >
        </cn.yun.ble.TopBar>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="0.83" >

        <cn.yun.ble.MySurfaceView
            android:id="@+id/mysurfaceview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/circle_button"
            android:text="@string/start"
            android:textColor="@drawable/dark_grey" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="#5295E3"
            android:layout_toLeftOf="@+id/btn_ctrl"
            android:text="@string/scan" />
        <Button
            android:id="@+id/btn_ctrl"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#5295E3"
            android:text="@string/control" />
        
         <Button
            android:id="@+id/btn_language"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btn_scan"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btn_ctrl"
            android:background="#5295E3"
            android:text="@string/language" />

    </RelativeLayout>

</LinearLayout>